@@ -2183,6 +2183,12 @@ class Nikola(object):
         context['title'] = post.title(lang)
         context['description'] = post.description(lang)
         context['permalink'] = post.permalink(lang)
+        if 'crumbs' not in context:
+            crumb_path = post.permalink(lang).lstrip('/').rstrip(self.config['INDEX_FILE'])
+            if crumb_path.endswith('/'):
+                context['crumbs'] = utils.get_crumbs(crumb_path.rstrip('/'), is_file=False)
+            else:
+                context['crumbs'] = utils.get_crumbs(crumb_path, is_file=True)
         if 'pagekind' not in context:
             context['pagekind'] = ['generic_page']
         if post.use_in_feeds:
